--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,8 +6,40 @@
     }
 }
 
-/* Min Width 1200px */
-@media only screen and (min-width:1200px){
+/* Min Width 992px */
+@media only screen and (min-width:992px){
+
+    .ams-nav-menu .sub-menu{
+        position: absolute;
+        display: block !important;
+        width: 250px;
+        background: var(--white-color);
+        box-shadow: 0 0 20px 3px rgb(0 0 0 / 5%);
+        opacity: 0;
+        visibility: hidden;
+        transform: translateY(50px);
+        transition: transform 0.3s ease-in-out;
+        z-index: 99;
+    }
+
+    .ams-nav-menu li:hover > .sub-menu{
+        opacity: 1;
+        visibility: visible;
+        transform: translateY(0);
+    }
+
+    .sub-menu li a{
+        position: relative;
+        display: block;
+        font-size: .95rem;
+        border-bottom: 1px dashed #ededed;
+        padding: 10px 15px;
+    }
+
+    .sub-menu li a:hover{
+        color: var(--secondary-color);
+        padding-left: 20px;
+    }
 
 }
 
