--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ input::placeholder {
     margin-right: 50px;
 }
 
-.sec-spacer-80 {
+.sec-spacer {
     padding: 100px 0;
 }
 
@@ -400,7 +400,7 @@ input::placeholder {
 }
 
 .single-service{
-    background: linear-gradient(45deg, rgba(211, 239, 237, 0.7) 0%, rgba(211, 239, 214, 0.49) 100%);
+    background-color: #E8FFFF;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
     padding: 55px 40px;
@@ -408,13 +408,41 @@ input::placeholder {
     transition: transform var(--transition) ease-in-out;
 }
 
+.services-wpr div[class^='col-']:nth-child(2) .single-service{
+    background-color: #E4F6FF;
+}
+
+.services-wpr div[class^='col-']:nth-child(3) .single-service{
+    background-color: #FFF0F1;
+}
+
+.services-wpr div[class^='col-']:nth-child(3) .single-service{
+    background-color: #FFF0F1;
+}
+
+.services-wpr div[class^='col-']:nth-child(4) .single-service{
+    background-color: #E8E4FF;
+}
+
+.services-wpr div[class^='col-']:nth-child(5) .single-service{
+    background-color: #FFE7D6;
+}
+
+.services-wpr div[class^='col-']:nth-child(6) .single-service{
+    background-color: #DAECFF;
+}
+
+.services-wpr div[class^='col-']:nth-child(7) .single-service{
+    background-color: #E1FCFF;
+}
+
+.services-wpr div[class^='col-']:nth-child(8) .single-service{
+    background-color: #FFDAE8;
+}
+
 .single-service:hover{
     transform: translateY(-10px) !important;
     box-shadow: 1px 30px 100px 10px rgba(0, 0, 0, 0.25);
-}
-
-.services-wpr div[class^='col-']:nth-child(even) .single-service{
-    background: linear-gradient(45deg, rgba(243, 246, 229, 0.7) 0%, rgba(231, 229, 246, 0.497) 100%);
 }
 
 .single-service .service-content h6{
@@ -497,6 +525,194 @@ input::placeholder {
 
 .features-wpr-2 .single-feature p{
     margin-top: 0;
+}
+
+/* Testimonial */
+
+.client-reviews .owl-stage-outer{
+    overflow: visible;
+    padding-bottom: 32px;
+}
+
+.client-reviews .owl-item{
+    opacity: 0;
+    visibility: hidden;
+    cursor: not-allowed;
+    pointer-events: none;
+}
+
+.client-reviews .owl-item.active{
+    opacity: 1;
+    visibility: visible;
+    cursor: pointer;
+    pointer-events: auto;
+}
+
+.client-reviews .owl-item.middle .single-review{
+    box-shadow: 0px 8.14815px 6.51852px rgba(49, 49, 49, 0.0392593), 0px 1.85185px 3.14815px rgba(49, 49, 49, 0.0240741);
+}
+
+.owl-carousel .owl-dots {
+    position: absolute;
+    display: inline-block;
+    bottom: 0;
+    left: 50%;
+}
+
+.owl-carousel .owl-dot {
+    margin: 5px;
+    outline: none;
+    width: 16px;
+    height: 16px;
+    border: 1px solid var(--text-color) !important;
+    border-radius: 50%;
+    background: transparent;
+    transition: 0.3s;
+}
+  
+.owl-carousel .owl-dot.active {
+background: var(--primary-color);
+box-shadow: inset 0 0 0 3px #fff;
+}
+
+.amstestimonial{
+    position: relative;
+    padding: 140px 0 60px;
+    z-index: 1;
+}
+
+.amstestimonial::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 80%;
+    background: url("../images/shapes/testimonial-curve.png") no-repeat left -40%;
+    background-size: cover;
+    z-index: -1;
+}
+
+.container-right{
+    padding-left: calc((100% - 1320px) / 2 + 15px);
+    padding-right: 0;
+}
+
+.single-review{
+    position: relative;
+    background-color: var(--white-color);
+    border: 1px solid #EDEDED;
+    box-shadow: none;
+    margin-top:30px;
+    transition: box-shadow var(--transition) ease-in;
+}
+
+.single-review .review-content{
+    padding: 50px 24px 24px;
+}
+
+.quote{
+    position: absolute;
+    top: -25px;
+    left: 25px;
+    display: inline-block;
+    width: 54px;
+    height: 54px;
+    font-size: 20px;
+    color: var(--white-color);
+    background-color: var(--primary-color);
+    border-radius: 50%;
+    text-align: center;
+    line-height: 54px;
+}
+
+.review-ratings span{
+    color: #FE8B75;
+}
+
+.review-msg{
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 10px;
+}
+
+.single-review .client{
+    display: grid;
+    grid-template-columns: 40px 1fr;
+    align-items: center;
+    grid-column-gap: 10px;
+    border-top: 1px solid #EAEFF3;
+    padding: 24px;
+}
+
+.client-desig h6{
+    font-size: 14px;
+    font-weight: var(--font-weight-bold);
+    margin-bottom: 5px;
+}
+
+.client-desig p{
+    font-size: 12px;
+    line-height: 14.52px;
+}
+
+/* Contact */
+
+.amscontact{
+    /* background-color: #DCF9E6;
+    padding: 130px 0; */
+    margin-bottom: -100px;
+}
+
+.contact-content h2{
+    padding-right: 100px;
+}
+
+.contact-form{
+    background: #FFFFFF;
+    box-shadow: 0px 80px 105.701px rgba(153, 171, 219, 0.7);
+    border-radius: 20px;
+    padding: 50px 32px;
+}
+
+.contact-form .input-grp input,
+.contact-form .input-grp textarea{
+    width: 100%;
+    height: 60px;
+    border: 1px solid #CFCFCF;
+    border-radius: 5px;
+    padding: 0 24px;
+    margin-bottom: 24px;
+}
+
+.contact-form input[type="checkbox"]{
+    position: relative;
+    appearance: none;
+    width: 22px;
+    height: 22px;
+    border: 1px solid #CFCFCF;
+    border-radius: 3px;
+    margin-right: 10px;
+    vertical-align: sub;
+}
+
+.contact-form input[type="checkbox"]:checked::before{
+    position: absolute;
+    content: "\f00c";
+    width: 100%;
+    height: 100%;
+    font-family: 'Font Awesome 6 Free';
+    font-weight: var(--font-weight-semi-bold);
+    color: var(--white-color);
+    border-radius: 3px;
+    background-color: var(--primary-color);
+    text-align: center;
+    line-height: 22px;
+}
+
+.contact-form .input-grp textarea{
+    height: 165px;
+    padding: 16px 24px;
 }
 
 /* Footer */
