--- a/css/style.css
+++ b/css/style.css
@@ -545,9 +545,17 @@ input::placeholder {
 /* Features */
 
 .ams-features{
-    background: url("../images/shapes/curve.png") no-repeat left center;
-    background-size: cover;
+    position: relative;
     padding: 120px 0 100px;
+    z-index: 1;
+}
+
+.ams-features > img{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 95%;
+    z-index: -1;
 }
 
 .features-wpr{
