--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,8 +1,18 @@
 /* Min Width 1400px */
 @media only screen and (min-width:1400px){
 
-    .container{
-       
+    .container-right{
+        padding-left: calc((100% - 1320px) / 2 + 15px) !important;
+        padding-right: 0;
+    }
+}
+
+/* Min Width 1200px */
+@media only screen and (min-width:1200px){
+
+    .container-right{
+        padding-left: calc((100% - 1140px) / 2 + 15px);
+        padding-right: 0;
     }
 }
 
@@ -46,17 +56,41 @@
 /* Max Width 1199px */
 @media only screen and (max-width:1199px){
 
+    .container-right{
+        padding-left: calc((100% - 960px) / 2 + 15px);
+        padding-right: 0;
+    }
+}
+
+/* Max Width 991px */
+@media only screen and (max-width:991px){
+
+    .container-right{
+        padding-left: calc((100% - 720px) / 2 + 15px);
+        padding-right: 0;
+    }
 }
 
 /* Max Width 767px */
 
 @media only screen and (max-width:767px){
 
+    .container-right{
+        padding-left: calc((100% - 540px) / 2 + 15px);
+        padding-right: 0;
+    }
+
 }
 
 /* Max Width 575px */
 
 @media only screen and (max-width:575px){
+
+    .container-right{
+        padding-left: var(--bs-gutter-x,.75rem);
+        padding-right: 0;
+    }
+
 }
 
 /* Max Width 480px */
