--- a/css/responsive.css
+++ b/css/responsive.css
@@ -14,6 +14,13 @@
         padding-left: calc((100% - 1140px) / 2 + 15px);
         padding-right: 0;
     }
+
+    .ams-banner .banner-image{
+        position: absolute;
+        width: 50%;
+        top: 0;
+        right: 0;
+    }
 }
 
 /* Min Width 992px */
@@ -51,6 +58,10 @@
         padding-left: 20px;
     }
 
+    .sec-heading p{
+        max-width: 50%;
+    }
+
 }
 
 /* Max Width 1199px */
@@ -59,6 +70,19 @@
     .container-right{
         padding-left: calc((100% - 960px) / 2 + 15px);
         padding-right: 0;
+    }
+
+    .banner-content h1{
+        font-size: 3rem;
+    }
+
+    .contact-content h2{
+        padding-right: 0;
+    }
+
+    .features-wpr{
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 24px;
     }
 }
 
@@ -69,6 +93,12 @@
         padding-left: calc((100% - 720px) / 2 + 15px);
         padding-right: 0;
     }
+
+    .sec-spacer,
+    .ams-banner{
+        padding: 80px 0;
+    }
+
 }
 
 /* Max Width 767px */
@@ -78,6 +108,14 @@
     .container-right{
         padding-left: calc((100% - 540px) / 2 + 15px);
         padding-right: 0;
+    }
+
+    .single-service{
+        padding: 30px 24px;
+    }
+
+    .features-wpr{
+        grid-template-columns: 1fr;
     }
 
 }
@@ -103,16 +141,36 @@
 
 @media only screen and (max-width:416px){
 
+    .banner-content h1 {
+        font-size: 2.285rem;
+    }
+
+    .contact-form{
+        padding: 32px 16px;
+    }
+
 }
 
 /* Max Width 380px */
 
 @media only screen and (max-width:380px){
 
+    .banner-content h1 {
+        font-size: 2rem;
+    }
+
+    .footer-menu div[class^="col-"]{
+        width: 100%;
+    }
+
 }
 
 /* Max Width 320px */
 
 @media only screen and (max-width:320px){
+
+    .banner-content h1 {
+        font-size: 1.8rem;
+    }
 
 }
