--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@ input::placeholder {
     position: absolute;
     top: -30px;
     right: 0;
+    animation: float-bob-y 3s linear infinite;
     z-index: -1;
 }
 
@@ -343,37 +344,12 @@ input::placeholder {
     z-index: 1;
 }
 
-.ams-banner .banner-content h1{
-    transform: translateY(100px);
-    opacity: 0;
-    transition: 1s;
-}
-
-.ams-banner .banner-content p{
-    transform: translateY(80px);
-    opacity: 0;
-    transition: all 1s .3s;
-}
-
-.ams-banner .banner-content a{
-    transform: translateY(50px);
-    opacity: 0;
-    transition: all 1s .5s;
-}
-
-.ams-banner .banner-content h1.animate,
-.ams-banner .banner-content p.animate,
-.ams-banner .banner-content a.animate{
-    transform: translate(0,0);
-    opacity: 1;
-}
-
 .color-title{
     color: var(--primary-color);
 }
 
 .ams-banner .banner-image{
-    animation: float-bob-y 3s linear infinite;
+    animation: float-bob-x 3s linear infinite;
     z-index: -1;
 }
 
@@ -473,6 +449,7 @@ input::placeholder {
     top: 0;
     right: auto;
     left: 0;
+    animation: float-bob-x 3s linear infinite;
 }
 
 /* Service Process */
@@ -996,6 +973,23 @@ box-shadow: inset 0 0 0 3px #fff;
     100% {
         -webkit-transform: translateY(-30px);
         transform: translateY(-30px);
+    }
+}
+
+@keyframes scale-bob {
+    0% {
+        -webkit-transform: scale(.2);
+        transform: scale(.2);
+    }
+
+    50% {
+        -webkit-transform: scale(.5);
+        transform: scale(.5);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
     }
 }
 
