--- a/css/style.css
+++ b/css/style.css
@@ -279,9 +279,18 @@ input::placeholder {
     background-color: var(--primary-color);
 }
 
+.ams-fashion .primary-btn{
+    background-color: #00A65A;
+    border-color: #00A65A;
+}
+
 .primary-btn:hover{
     color: var(--primary-color);
     background-color: transparent;
+}
+
+.ams-fashion .primary-btn:hover{
+    color: #00A65A;
 }
 
 .color-text{
@@ -344,8 +353,27 @@ input::placeholder {
     z-index: 1;
 }
 
+.fashion-banner{
+    background: url("../images/banner/fashion-bg.png") no-repeat center;
+}
+
+.fashion-banner::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(2, 2, 2, 0.7);
+    z-index: -1;
+}
+
 .color-title{
     color: var(--primary-color);
+}
+
+.fashion-banner .color-text{
+    color: #00A65A;
 }
 
 .ams-banner .banner-image{
