--- a/css/style.css
+++ b/css/style.css
@@ -1133,6 +1133,46 @@ box-shadow: inset 0 0 0 3px #fff;
     color: #000;
 }
 
+/* Login */
+
+.ams-login-wpr{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ams-login{
+    position: relative;
+    background: url("../images/shapes/login-shape.png") no-repeat;
+    background-size: 65%;
+    background-color: #E8F5F5;
+    border-radius: 10px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 30px 0;
+    z-index: 1;
+}
+
+.login-abstract{
+    position: absolute;
+    z-index: -1;
+}
+
+.ams-login .contact-form{
+    background-color: transparent;
+    box-shadow: none;
+}
+
+.ams-login .login-form .ams-btn{
+    width: 100%;
+    background-color: #2148C0;
+    border-radius: 16px;
+}
+
+.login-form .ams-btn:hover{
+    color: var(--white-color);
+}
+
 /* Footer */
 
 .ams-footer{
