--- a/css/style.css
+++ b/css/style.css
@@ -402,6 +402,41 @@ input::placeholder {
     transform: translateY(-10%);
 }
 
+/* About  */
+
+.sec-spacer{
+    padding: 100px 0;
+}
+
+.sec-title {
+    font-size: 50px;
+    color: var(--primary-color);
+}
+
+.sec-des {
+    font-size: 22px;
+    font-weight: var(--font-weight-medium);
+}
+
+.sec-facility-list li, .sec-useage-list li {
+    font-size: 20px;
+    color: var(--primary-color);
+    margin-top: 8px;
+}
+
+.sec-facility-list li span {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    font-size: 16px;
+    color: #fff;
+    text-align: center;
+    background-color: #0AAE38;
+    border-radius: 3px;
+    line-height: 24px;
+    vertical-align: text-top;
+}
+
 /* Partners */
 
 .partner-slider .item{
@@ -1374,5 +1409,3 @@ box-shadow: inset 0 0 0 3px #fff;
         transform: scale(1);
     }
 }
-
-
