--- a/css/style.css
+++ b/css/style.css
@@ -284,7 +284,7 @@ input::placeholder {
 
 .primary-btn{
     color: var(--white-color);
-    background-color: var(--primary-color);
+    background: linear-gradient(20.42deg, #286CD1 12.24%, #002698 82.82%);
     /* box-shadow: inset 0 0 0 0 var(--white-color); */
 }
 
@@ -351,6 +351,52 @@ input::placeholder {
     animation: float-bob-y 3s linear infinite;
     z-index: -1;
 }
+
+.vid-icon {
+    position: relative;
+    left: 50px;
+    display: inline-block;
+    height: 60px;
+    width: 60px;
+    background: var(--white-color);
+    border-radius: 50%;
+    text-align: center;
+}
+  
+.vid-icon i {
+    line-height: 60px;
+    font-size: 24px;
+    font-weight: 900;
+    color: var(--primary-color);
+    text-indent: 4px;
+}
+  
+.vid-icon i:after {
+    position: absolute;
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 20px;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    box-shadow: 0 0 rgb(55 52 168 / 10%), 0 0 0 15px rgb(55 52 168 / 10%),
+        0 0 0 30px rgb(55 52 168 / 10%);
+    animation: ripple-wave1 1s linear infinite;
+    animation-play-state: running;
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+}
+  
+@keyframes ripple-wave1 {
+to {
+    box-shadow: 0 0 0 15px rgba(55, 52, 168, 0.1),
+    0 0 0 30px rgba(55,52,168, 0.1), 0 0 0 45px rgba(55,52,168, 0.02);
+}
+}
+
 
 /* Header */
 
@@ -497,7 +543,7 @@ input::placeholder {
     padding: 55px 40px;
     text-align: center;
     z-index: 1;
-    transition: transform var(--transition) ease-in-out;
+    transition: .1s ease-in-out;
     cursor: pointer;
 }
 
@@ -551,7 +597,7 @@ input::placeholder {
 }
 
 .single-service:hover{
-    transform: translateY(-10px) !important;
+    /* transform: translateY(-10px) !important; */
     box-shadow: 1px 30px 100px 10px rgba(0, 0, 0, 0.25);
 }
 
@@ -692,17 +738,17 @@ input::placeholder {
 }
 
 .single-feature{
+    position: relative;
     background: linear-gradient(#fff, #fff 50%, #3734a9 50%, #3734a9);
     background-size: 100% 200%;
     border: 1px solid #EAEAEA;
     border-radius: 15px;
-    padding: 30px;
+    padding: 30px 30px 60px;
     transition: background .5s;
 }
 
 .single-feature:hover {
     background-position: 100% 100%;
-    border-color: transparent;
 }
 
 .single-feature:hover *,
@@ -726,6 +772,9 @@ input::placeholder {
 }
 
 .single-feature .read-more{
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
     font-family: var(--title-font);
     font-weight: var(--font-weight-semi-bold);
     color: var(--secondary-color);
@@ -1028,6 +1077,15 @@ input::placeholder {
     margin-top: 24px;
     padding: 22px 40px;
     line-height: 1;
+}
+
+.ams-news-letter .ams-btn:hover{
+    color: var(--white-color);
+    border-color: var(--white-color);
+}
+
+.ams-news-letter .ams-btn::before{
+    background-color: var(--primary-color);
 }
 
 /* Testimonial */
